    - file fragmentation reports moved from the root directories of
      the drives to the /reports sub-folder of the program's directory
    - added ability to configure the Explorer's context menu handler;
      an appropriate section added to guiopts.lua file
    - bug fix: UD_IN_FILTER forced to be not ignored when individual
      files/directories are specified on the command line
    - added prefixes for all the debugging messages for easier analysis of logs

    - Internals: obsolete winx_virtual_alloc, winx_virtual_free, winx_prompt_ex,
      winx_load_driver, winx_unload_driver calls removed from zenwinx library
    - winx_heap_alloc, winx_heap_free, winx_list_insert_item, 
      winx_list_remove_item, winx_print_array_of_strings,
      winx_get_environment_variable, winx_set_environment_variable calls
      superseded by winx_malloc, winx_free, winx_list_insert, winx_list_remove,
      winx_print_strings, winx_getenv, winx_setenv calls
    - winx_get_proc_address, winx_create_thread, winx_get_windows_directory,
      winx_prompt prototypes changed
    - WgxSetTaskbarProgressState and WgxSetTaskbarProgressValue routines
      added to wgx library

    beta1:
    - all the disk processing algorithms were reimplemented
      to reach better efficiency and shorter processing times
    - FAT optimization was implemented
    - ability to sort files on the disk by the disk optimization was added;
      files can be sorted by path, size, creation time, last modification time,
      last access time - in eighter ascending or descending order
    - ability to filter out files by size of their fragments was added
      (fragment_size_threshold option in GUI; UD_FRAGMENT_SIZE_THRESHOLD
      environment variable in command line tool and boot time interface)
    - ability to tune the disk optimization by UD_OPTIMIZER_FILE_SIZE_THRESHOLD
      environment variable (optimizer_file_size_threshold GUI option) was added